blog image center aligned, home page & guides styling fixes

--- a/src/guides/css/main.css
+++ b/src/guides/css/main.css
@@ -222,6 +222,9 @@ ol {
   margin-left: 20px;
   position: relative;
 }
+#guides-container blockquote {
+  color: #4e4e4e;
+}
 
 #guides-container .project ol {
   margin-left: 20px;
@@ -231,6 +234,7 @@ ol {
   margin-top: 8px;
   margin-bottom: 8px;
   padding-left: 18px;
+  color: #4e4e4e;
 }
 #guides-container .project ul li {
   margin-top: 8px;
